All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Complete__c/SPM_Mean_Time_To_Complete__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This custom object is used to capture the Mean Time To Complete the work order details.</description>
    <label>SPM - Mean Time To Complete</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPM - Mean Time To Complete</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>