All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Complete__c/fields/Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Completion_Time__c</fullName>
    <label>Completion Time (In Mins)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>