All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Complete__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
    <type>Lookup</type>
</CustomField>