All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Complete__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Service Request</description>
    <inlineHelpText>Lookup to Service Request</inlineHelpText>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
    <type>Lookup</type>
</CustomField>