All_Component_DX/force-app/main/default/objects/SPM_Mean_Time_To_Complete__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipLabel>SPM - Mean Time To Complete</relationshipLabel>
    <relationshipName>SPM_Mean_Time_To_Complete</relationshipName>
    <type>Lookup</type>
</CustomField>